fix line wrapping on map legend text

--- a/css/maps.css
+++ b/css/maps.css
@@ -113,6 +113,7 @@
 
 #legend_wrapper td + td {
 	padding-left: 1ex;
+	white-space: nowrap;
 }
 
 #map_logo {
